fix ingredients spacing on detail view

--- a/meal-ui/src/styles/local/partials/2-components/recipe-card/recipe-card.scss
+++ b/meal-ui/src/styles/local/partials/2-components/recipe-card/recipe-card.scss
@@ -29,6 +29,10 @@
 			flex-basis: 100%;
 		}
 
+		.ingredients-list > * {
+			margin-top: $spacing-04;
+		}
+
 		.recipe-data__meta {
 			display: flex;
 			flex-direction: column;
